Ksar.java - fix deprecated warning, remove unused/redundant stuff (#185)
* remove redundant initializations

* remove unused function and property

* change public to private

* fix #175 - newInstance() in Class has been deprecated